<resources>
    <string name="app_name" translatable="false">Au Temps donné</string>
    <string name="au_temps_donne">AU TEMPS DONNÉ</string>
    <string name="mobile_software">Mobile Software</string>
    <string name="email_or_username">Email or username :</string>
    <string name="password">Password :</string>
    <string name="stay_connected">Stay connected</string>
    <string name="login">Login</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="home">Home</string>
    <string name="stock">Stock</string>
    <string name="harvest">Harvest</string>
    <string name="ederly">Ederly</string>
    <string name="logout">Logout</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="quantit">Quantity</string>
    <string name="code_barre">Barcode</string>
    <string name="expiration_date">Expiration date</string>
    <string name="category">Category</string>
    <string name="type">Type</string>
    <string name="collect">Collect</string>
    <string name="add_the_product">Add the product</string>
    <string name="you_can_connect_the_nfc_token">You can connect the NFC Token</string>
    <string name="recept_the_product">Recept the product</string>
    <string name="barcode">Barcode</string>
    <string name="location">Location</string>
    <string name="warehouse">Warehouse</string>
    <string name="scan_the_nfc_token">Scan the NFC token</string>
    <string name="select_a_user_and_scan_the_nfc">Select a user and scan the NFC</string>
    <string name="what_do_you_want_to_do">What do you want to do ?</string>
    <string name="assign_an_nfc_token">Assign an NFC token</string>
    <string name="scan_an_nfc_token">Scan an NFC token</string>
    <string name="act_on_the_food_harvest">Act on the food harvest :</string>
    <string name="are_you_collecting_the_products_or_storing_them">Are you collecting the products or storing them ?</string>
    <string name="i_m_collecting">I\'m collecting</string>
    <string name="i_m_storing">I\'m storing</string>
</resources>