<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    tools:context=".ReceptProduct">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">
        <ImageView
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:src="@drawable/rangement_illustration"
            android:contentDescription="imageRangement"
            android:layout_gravity="center"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/akshar_bold"
                android:textSize="16dp"
                android:text="@string/warehouse"/>
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:spinnerMode="dropdown"
                android:id="@+id/warehouseSpinner"
                android:layout_marginBottom="16dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/akshar_bold"
                android:textSize="16dp"
                android:text="@string/location"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/locationProduct"
                android:inputType="text"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/akshar_bold"
                android:textSize="16dp"
                android:text="@string/collect"/>
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:spinnerMode="dropdown"
                android:id="@+id/collectReceptSpinner"
                android:layout_marginBottom="16dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/akshar_bold"
                android:textSize="16dp"
                android:text="@string/barcode"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/barcodeRecept"
                android:inputType="text"/>
        </LinearLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recept_the_product"
            android:backgroundTint="@color/dark_blue"
            android:id="@+id/receptProductBtn"
            android:layout_marginTop="16dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textColor="@color/red"
            android:id="@+id/errorReceptMsg"/>
    </LinearLayout>
</LinearLayout>