<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EderlyFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/what_do_you_want_to_do"
            android:fontFamily="@font/bebas_neue_regular"
            android:textSize="24dp"
            android:layout_marginBottom="64dp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnAssignNFC"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginRight="50dp"
                android:background="@drawable/border_choice">
                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/nfc"
                    android:id="@+id/assignNfcEderly"/>
                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/assign_an_nfc_token"
                    android:textAlignment="center"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/btnScanNFC"
                android:gravity="center"
                android:background="@drawable/border_choice">
                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/scan"
                    android:id="@+id/scanNfcEderly"/>
                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/scan_an_nfc_token"
                    android:textAlignment="center"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>